--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "googleapis": "^109.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-sequence-plugin": "^1.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
